--- a/DP_21800609.ipynb
+++ b/DP_21800609.ipynb
@@ -749,6 +749,490 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=\"red\">Logbook Exercise 8</font> ##\n",
+    "\n",
+    "- Your task is to extend the modified version of Burkhard Meier's button factory (below) to create a text field factory\n",
+    "- In tkinter textfields are 'Entry' widgets\n",
+    "- similary to the button factory structure you will need:\n",
+    " - a concrete Entry widget factory class - name it TextFactory()\n",
+    " - the TextFactory's Factory Method - name it createText(...)\n",
+    " - an abstract product - name it TextBase() and give it default attributes 'textvariable' and 'background'\n",
+    " - a getTextConfig(...) method\n",
+    " - 3x concrete text products - name these Text_1/2/3 \n",
+    " - ... and assign them textvariable values of \" red/blue/green type\" respectively\n",
+    " - ... and assign them background values of 'red/blue/green' respectively\n",
+    " - to extend the OOP class with a createTextFields() method\n",
+    " - ... that creates a factory object\n",
+    " - and the Entry fields ... the code for the first Entry Field is as follows\n",
+    " ```\n",
+    "        # Entry field 1\n",
+    "        sv=tk.StringVar()\n",
+    "        tx = factory.createText(0).getTextConfig()[0]\n",
+    "        sv.set(tx)\n",
+    "        bg  = factory.createText(0).getTextConfig()[1]\n",
+    "        action = tk.Entry(self.widgetFactory, textvariable=sv, background=bg, foreground=\"white\")   \n",
+    "        action.grid(column=1, row=1)  \n",
+    " ```\n",
+    "- the end product should look something like this ...\n",
+    "![widgetFactory.png](attachment:widgetFactory.png)\n",
+    "\n",
+    "#### Challenge question ####\n",
+    "\n",
+    "- At present the example has a 2x 'concretete' creators. As a comment just above the line ``` import tkinter as tk ``` briefly explain what you would need to do to refactor code so that the concrete creators extended an abstract class/interface called ***Creator*** (i.e. just as it appears in Gamma et al. (1995) and on slide 2)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# There would be a single creator class with a factory method. One concreate creator will inherit from the\n",
+    "# parent creator and will have a factory method which creates a new concreate class, such as the text.\n",
+    "# The text concreate class will inherit from a text base.\n",
+    "\n",
+    "import tkinter as tk\n",
+    "from tkinter import ttk\n",
+    "from tkinter import Menu\n",
+    "\n",
+    "class ButtonFactory():\n",
+    "    def createButton(self, type_):\n",
+    "        return buttonTypes[type_]()\n",
+    "            \n",
+    "class ButtonBase():     \n",
+    "    relief     ='flat'\n",
+    "    foreground ='white'\n",
+    "    def getButtonConfig(self):\n",
+    "        return self.relief, self.foreground\n",
+    "    \n",
+    "class ButtonRidge(ButtonBase):\n",
+    "    relief     ='ridge'\n",
+    "    foreground ='red'        \n",
+    "    \n",
+    "class ButtonSunken(ButtonBase):\n",
+    "    relief     ='sunken'\n",
+    "    foreground ='blue'        \n",
+    "\n",
+    "class ButtonGroove(ButtonBase):\n",
+    "    relief     ='groove'\n",
+    "    foreground ='green'        \n",
+    "\n",
+    "buttonTypes = [ButtonRidge, ButtonSunken, ButtonGroove]\n",
+    "\n",
+    "# followed instructions for creating text classes\n",
+    "class TextFactory():\n",
+    "    def createText(self, type_):\n",
+    "        return textTypes[type_]()\n",
+    "            \n",
+    "class TextBase():     \n",
+    "    textvariable ='flat'\n",
+    "    background   ='white'\n",
+    "    def getTextConfig(self):\n",
+    "        return self.textvariable, self.background\n",
+    "    \n",
+    "class Text_1(TextBase):\n",
+    "    textvariable ='red type'\n",
+    "    background   ='red'  \n",
+    "    \n",
+    "class Text_2(TextBase):\n",
+    "    textvariable ='blue type'\n",
+    "    background   ='blue'  \n",
+    "\n",
+    "class Text_3(TextBase):\n",
+    "    textvariable ='green type'\n",
+    "    background   ='green'        \n",
+    "\n",
+    "textTypes = [Text_1, Text_2, Text_3]\n",
+    "\n",
+    "    \n",
+    "class OOP():\n",
+    "    def __init__(self): \n",
+    "        self.win = tk.Tk()         \n",
+    "        self.win.title(\"Python GUI\")      \n",
+    "        self.createWidgets()\n",
+    "\n",
+    "    def createWidgets(self):    \n",
+    "        self.widgetFactory = ttk.LabelFrame(text=' Button Factory ')\n",
+    "        self.widgetFactory.grid(column=0, row=0, padx=8, pady=4)        \n",
+    "\n",
+    "        self.createButtons()\n",
+    "        self.createTextFields() # new createTextFields method\n",
+    "\n",
+    "    def createButtons(self):\n",
+    "        factory = ButtonFactory()\n",
+    "\n",
+    "        for i in range(3):\n",
+    "            rel = factory.createButton(i).getButtonConfig()[0]\n",
+    "            fg  = factory.createButton(i).getButtonConfig()[1]\n",
+    "            action = tk.Button(self.widgetFactory, text=\"Button \"+str(i+1), relief=rel, foreground=fg)   \n",
+    "            action.grid(column=0, row=i+1)\n",
+    "\n",
+    "    def createTextFields(self):    \n",
+    "        factory = TextFactory()\n",
+    "        \n",
+    "        for i in range(3): # for loop to create each text field\n",
+    "            sv = tk.StringVar()\n",
+    "            tx = factory.createText(i).getTextConfig()[0]\n",
+    "            sv.set(tx)\n",
+    "            bg = factory.createText(i).getTextConfig()[1]\n",
+    "            action = tk.Entry(self.widgetFactory, textvariable=sv, background=bg, foreground=\"white\")   \n",
+    "            action.grid(column=1, row=i+1)\n",
+    "\n",
+    "\n",
+    "#==========================\n",
+    "oop = OOP()\n",
+    "oop.win.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=\"red\">Logbook Exercise 9</font> ##\n",
+    "​\n",
+    "- Extend the Jungwoo Ryoo's Abstract Factory below to mirror the structure used by a statically typed languages by:\n",
+    " - adding a 'CatFactory' and a 'Cat' class with methods that are compatible with 'DogFactory' and 'Dog' respectively\n",
+    " - providing an Abstract Factory class/interface named 'AnimalFactory' and make both the Dog and Cat factories implement this\n",
+    " - providing an AbstractProduct (name this 'Animal') and make both Dog and cat classes implement this\n",
+    "- Use in-code comments (#) to identify the abstract and concrete entities present in Gamma et al. (1995)\n",
+    " - comments should include: \"# Abstract Factory #\"; \"# Concrete Factory #\"; \"# Abstract Product #\"; \"# Concrete Product #\"; and \"# The Client #\"\n",
+    "- Implement the CatFactory ... the end output should look something like this ...\n",
+    "​\n",
+    "```\n",
+    "Our pet is 'Dog'!\n",
+    "Our pet says hello by 'Woof'!\n",
+    "Its food is 'Dog Food'!\n",
+    "​\n",
+    "Our pet is 'Cat'!\n",
+    "Our pet says hello by 'Meeoowww'!\n",
+    "Its food is 'Cat Food'!\n",
+    "```\n",
+    "​"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Our pet is 'Dog'!\n",
+      "Our pet says hello by 'Woof!'\n",
+      "Its food is 'Dog Food!'!\n",
+      "Our pet is 'Cat'!\n",
+      "Our pet says hello by 'Meeoowww!'\n",
+      "Its food is 'Cat Food!'!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Animal class\n",
+    "class Animal:\n",
+    "    def speak(self):\n",
+    "        return \"I'm an animal\"\n",
+    "    def __str__(self):\n",
+    "        return \"Animal\"\n",
+    "\n",
+    "class Dog(Animal): # Dog inherits from Animal class\n",
+    "    def speak(self):\n",
+    "        return \"Woof!\"\n",
+    "    def __str__(self):\n",
+    "        return \"Dog\"\n",
+    "\n",
+    "class Cat(Animal): # Cat inherits from Animal class\n",
+    "    def speak(self):\n",
+    "        return \"Meeoowww!\"\n",
+    "    def __str__(self):\n",
+    "        return \"Cat\"\n",
+    "\n",
+    "# new AnimalFactory\n",
+    "class AnimalFactory:\n",
+    "    def get_pet(self):\n",
+    "        return Animal()\n",
+    "    def get_food(self):\n",
+    "        return \"Animal Food!\"\n",
+    "\n",
+    "class DogFactory(AnimalFactory): # DogFactory inherits from AnimalFactory\n",
+    "    def get_pet(self):\n",
+    "        return Dog()\n",
+    "    def get_food(self):\n",
+    "        return \"Dog Food!\"\n",
+    "    \n",
+    "class CatFactory(AnimalFactory): # CatFactory inherits from AnimalFactory\n",
+    "    def get_pet(self):\n",
+    "        return Cat()\n",
+    "    def get_food(self):\n",
+    "        return \"Cat Food!\"\n",
+    "\n",
+    "class PetStore: # no changes made to Pet store\n",
+    "    def __init__(self, pet_factory=None):\n",
+    "        self._pet_factory = pet_factory\n",
+    "    def show_pet(self):\n",
+    "        pet = self._pet_factory.get_pet()\n",
+    "        pet_food = self._pet_factory.get_food()\n",
+    "        print(\"Our pet is '{}'!\".format(pet))\n",
+    "        print(\"Our pet says hello by '{}'\".format(pet.speak()))\n",
+    "        print(\"Its food is '{}'!\".format(pet_food))\n",
+    "\n",
+    "# create the different factories\n",
+    "dog_factory = DogFactory()\n",
+    "cat_factory = CatFactory()\n",
+    "\n",
+    "# create a shop for each animal\n",
+    "shop1 = PetStore(dog_factory)\n",
+    "shop2 = PetStore(cat_factory)\n",
+    "\n",
+    "# invoke show_pet method for each animal\n",
+    "shop1.show_pet()\n",
+    "shop2.show_pet()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=\"red\">Logbook Exercise 10</font> ##\n",
+    "\n",
+    "- Modify Jungwoo Ryoo's Strategy Pattern to showcase ***OpenCV*** capabilities with different image processing strategies\n",
+    "- We will use the ***OpenCV*** (Open Computer Vision) library which has been reproduced with Python bindings\n",
+    "- OpenCV has many standard computer science image-processing filters and includes powerful AI machine learning algorithms\n",
+    "- The following resources provide more information on OpenCv with Python ...\n",
+    " - Beyeler, M. (2015). OpenCV with Python blueprints. Packt Publishing Ltd.\n",
+    " - Joshi, P. (2015). OpenCV with Python by example. Packt Publishing Ltd.\n",
+    " - The cartoon effect is from http://www.askaswiss.com/2016/01/how-to-create-cartoon-effect-opencv-python.html and https://www.tutorialspoint.com/cartooning-an-image-using-opencv-in-python\n",
+    "\n",
+    "### Development stages ###\n",
+    "- Copy Jungwoo Ryoo's code to a code cell below this one\n",
+    "- As well as the ***types*** module you will need to provide access to OpenCV and numpy as follows\n",
+    "```\n",
+    "    # Import OpenCV\n",
+    "    import cv2\n",
+    "    import numpy as np\n",
+    "```\n",
+    "- Please place a copy of clouds.jpg in the same directory as your Jupyter logbook \n",
+    "- The code for each strategy and some notes on implementing these are below ...\n",
+    "- The output should look something like this ... but if you wish feel free to experiment with something else ... cats etc.!\n",
+    "![strategy_images.png](attachment:strategy_images.png)\n",
+    "\n",
+    "### Implementing image processing strategies ###\n",
+    "\n",
+    "- There will be six strategy objects s0-s5, where s0 is the default strategy of the **Strategy** class\n",
+    "- Instead of assigning a name to each strategy object, you will need to reference the image to be processed - 'clouds.jpg'\n",
+    " - i.e. s0.image = \"clouds.jpg\"\n",
+    "- The *body* code for each strategy is below, you will need to provide the method signatures and their executions\n",
+    "\n",
+    "\n",
+    "#### strategy s0 ####\n",
+    "\n",
+    "The default ***execute()*** method that simply displays the image sent to it \n",
+    "\n",
+    "```\n",
+    "        print(\"The image {} is used to execute Strategy 0 - Display image\".format(self.image))\n",
+    "        img_rgb = cv2.imread(self.image)\n",
+    "        cv2.imshow('Image', img_rgb)\n",
+    "```\n",
+    "\n",
+    "#### strategy s1 ####\n",
+    "\n",
+    "This converts a colour image into a mononochrome one - suggested strategy method name is ***strategy_greyscale***\n",
+    "\n",
+    "```\n",
+    "    img_rgb = cv2.imread(self.image)\n",
+    "    img_gray = cv2.cvtColor(img_rgb, cv2.COLOR_RGB2GRAY)\n",
+    "    cv2.imshow('Greyscale image', img_gray)\n",
+    "    \n",
+    "```\n",
+    "\n",
+    "#### strategy s2 ####\n",
+    "\n",
+    "This applies a blur filter to an image - suggested strategy method name is ***strategy_blur***\n",
+    "\n",
+    "```\n",
+    "    img_rgb = cv2.imread(self.image)\n",
+    "    img_blur = cv2.medianBlur(img_rgb, 7)\n",
+    "    cv2.imshow('Blurred image', img_blur)\n",
+    "\n",
+    "```\n",
+    "\n",
+    "#### strategy s3 ####\n",
+    "\n",
+    "This produces a colour negative image from a colour one - suggested strategy method name is ***strategy_colNegative***\n",
+    "\n",
+    "```\n",
+    "  img_rgb = cv2.imread(self.image)\n",
+    "    for x in np.nditer(img_rgb, op_flags=['readwrite']):\n",
+    "        x[...] = (255 - x)\n",
+    "    cv2.imshow('Colour negative', img_rgb)\n",
+    "\n",
+    "```\n",
+    "\n",
+    "#### strategy s4 ####\n",
+    "\n",
+    "This produces a monochrome negative image from a colour one - suggested strategy method name is ***strategy_greyNegative***\n",
+    "\n",
+    "```\n",
+    "    img_rgb = cv2.imread(self.image)\n",
+    "    img_grey = cv2.cvtColor(img_rgb, cv2.COLOR_RGB2GRAY)\n",
+    "    for x in np.nditer(img_grey, op_flags=['readwrite']):\n",
+    "        x[...] = (255 - x)\n",
+    "    cv2.imshow('Monochrome negative', img_grey)\n",
+    "```\n",
+    "\n",
+    "#### strategy s5 ####\n",
+    "\n",
+    "This produces a cartoon-like effect - suggested strategy method name is ***strategy_cartoon***\n",
+    "\n",
+    "```\n",
+    "    #Use bilateral filter for edge smoothing.\n",
+    "    num_down = 2 # number of downsampling steps\n",
+    "    num_bilateral = 7 # number of bilateral filtering steps\n",
+    "    img_rgb = cv2.imread(self.image)\n",
+    "    # downsample image using Gaussian pyramid\n",
+    "    img_color = img_rgb\n",
+    "    for _ in range(num_down):\n",
+    "        img_color = cv2.pyrDown(img_color)\n",
+    "    # repeatedly apply small bilateral filter instead of applying one large filter\n",
+    "    for _ in range(num_bilateral):\n",
+    "        img_color = cv2.bilateralFilter(img_color, d=9, sigmaColor=9, sigmaSpace=7)\n",
+    "    # upsample image to original size\n",
+    "    for _ in range(num_down):\n",
+    "        img_color = cv2.pyrUp(img_color)\n",
+    "    #Use median filter to reduce noise convert to grayscale and apply median blur\n",
+    "    img_gray = cv2.cvtColor(img_rgb, cv2.COLOR_RGB2GRAY)\n",
+    "    img_blur = cv2.medianBlur(img_gray, 7)\n",
+    "    #Use adaptive thresholding to create an edge mask detect and enhance edges\n",
+    "    img_edge = cv2.adaptiveThreshold(img_blur, 255, cv2.ADAPTIVE_THRESH_MEAN_C, cv2.THRESH_BINARY, blockSize=9, C=2)\n",
+    "    # Combine color image with edge mask & display picture, convert back to color, bit-AND with color image\n",
+    "    img_edge = cv2.cvtColor(img_edge, cv2.COLOR_GRAY2RGB)\n",
+    "    img_cartoon = cv2.bitwise_and(img_color, img_edge)\n",
+    "    # display\n",
+    "    cv2.imshow(\"Cartoon-ised image\", img_cartoon); cv2.waitKey(0); cv2.destroyAllWindows()\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Default Strategy is used!\n",
+      "Strategy One is used to execute method 1\n",
+      "Strategy Two is used to execute method 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import OpenCV\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import types\n",
+    "\n",
+    "class Strategy:    \n",
+    "    def __init__(self, function=None):\n",
+    "        self.name = \"Default Strategy\"\n",
+    "        if function:\n",
+    "            self.execute = types.MethodType(function, self)\n",
+    "            \n",
+    "    def execute(self):\n",
+    "        print(\"{} is used!\".format(self.name))\n",
+    "        print(\"The image {} is used to execute Strategy 0 - Display image\".format(self.image))\n",
+    "        img_rgb = cv2.imread(self.image)\n",
+    "        cv2.imshow('Image', img_rgb)\n",
+    "\n",
+    "def strategy_one(self):\n",
+    "    print(\"{} is used to execute method 1\".format(self.name))\n",
+    "\n",
+    "def strategy_two(self):\n",
+    "    print(\"{} is used to execute method 2\".format(self.name))\n",
+    "    \n",
+    "s0 = Strategy()\n",
+    "s0.execute()\n",
+    "\n",
+    "s1 = Strategy(strategy_one)\n",
+    "s1.name = \"Strategy One\"\n",
+    "s1.execute()\n",
+    "\n",
+    "s2 = Strategy(strategy_two)\n",
+    "s2.name = \"Strategy Two\"\n",
+    "s2.execute()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=\"red\">Logbook Exercise 11</font> ##\n",
+    "\n",
+    "- Demonstrate the use of ```__iter__()```, ```__next()__``` and ```StopIteration``` using ...\n",
+    "- ... the first four items from the top10books list (see above) ... \n",
+    "- ... and the following structure\n",
+    "\n",
+    "```\n",
+    "mylist = ['item1', 'item2', 'item3'] \n",
+    "\n",
+    "iter_mylist = iter(mylist) \n",
+    "\n",
+    "try: \n",
+    "    print( next(iter_mylist))  \n",
+    "    print( next(iter_mylist))  \n",
+    "    print( next(iter_mylist))\n",
+    "    # Exceeds numbe of items so should raise StopIteration exception\n",
+    "    print( next(iter_mylist)) \n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "    print(sys.exc_info())\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anna Karenina by Leo Tolstoy\n",
+      "Madame Bovary by Gustave Flaubert\n",
+      "War and Peace by Leo Tolstoy\n",
+      "Lolita by Vladimir Nabokov\n",
+      "\n",
+      "End of list\n"
+     ]
+    }
+   ],
+   "source": [
+    "mylist = [\"Anna Karenina by Leo Tolstoy\", \"Madame Bovary by Gustave Flaubert\", \"War and Peace by Leo Tolstoy\", \n",
+    "           \"Lolita by Vladimir Nabokov\"]\n",
+    "\n",
+    "iter_mylist = iter(mylist) \n",
+    "\n",
+    "try: \n",
+    "    print( next(iter_mylist))  \n",
+    "    print( next(iter_mylist))  \n",
+    "    print( next(iter_mylist))\n",
+    "    print( next(iter_mylist))\n",
+    "    print( next(iter_mylist)) # Exceeds number of items so should raise StopIteration exception\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "    print('End of list')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
